[project]
name = "dsp-exercise-1"
version = "0.1.0"
description = "DSP Exercise 1 - Time Domain Analysis"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
    "streamlit>=1.54.0",
    "numpy>=1.26.0",
    "plotly>=5.20.0",
    "scipy>=1.12.0",
    "pandas-stubs>=3.0.0.260204",
    "librosa>=0.11.0",
    "soundfile>=0.13.1",
    "matplotlib>=3.10.8",
    "git-filter-repo>=2.47.0",
]
